# anti

./: docker-compose.dev.yml  pyproject.toml  test.txt
data/: game_samples.jsonl
data/live_samples/pick1-tosios/srv-local/: samples_000000.jsonl  samples_000009.jsonl
data/live_samples/real-playtest/local-server-1/: samples_000000.jsonl
models/features/: __init__.py  compute.py  schema.py
sdk/python/: pyproject.toml
sdk/python/anticheat_sdk/: __init__.py  client.py  local_scorer.py
services/: Dockerfile
services/action/: main.py  pyproject.toml
services/decision/: main.py  pyproject.toml
services/detector/: main.py  pyproject.toml
services/gateway/: main.py  pyproject.toml
services/ml_worker/: main.py  pyproject.toml
tests/: generate_game_samples.py  run_sample_flow.py  test_health_endpoints.py  test_live_sampler_endpoints.py  test_live_sampler_sender.py  validate_game_samples.py
